# Copyright (c) 2020-2022, NVIDIA CORPORATION.

[versioneer]
VCS = git
style = pep440
versionfile_source = raft_dask/_version.py
versionfile_build = raft_dask/_version.py
tag_prefix = v
parentdir_prefix = raft_dask-

[isort]
line_length=79
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
order_by_type=True
known_dask=
    dask
    distributed
    dask_cuda
known_rapids=
    nvtext
    cudf
    cuml
    cugraph
    dask_cudf
    rmm
known_first_party=
    raft_dask
default_section=THIRDPARTY
sections=FUTURE,STDLIB,THIRDPARTY,DASK,RAPIDS,FIRSTPARTY,LOCALFOLDER
skip=
    thirdparty
    .eggs
    .git
    .hg
    .mypy_cache
    .tox
    .venv
    _build
    buck-out
    build
    dist
    __init__.py

[options]
packages = find:
python_requires = >=3.7,<=3.10
